Modified .gitignore to ignore old/ folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 ######################
+# firstmarket Specific
+######################
+old/
+
+######################
 # Project Specific
 ######################
 /build/www/**
