--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.h2.console.enabled=true
+##spring.jpa.show-sql=true
 server.servlet.context-path=/firstmarket
 spring.servlet.multipart.max-file-size=128KB
 spring.servlet.multipart.max-request-size=128KB
