--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,8 @@ server:
 spring:
    profiles:
       active:
-         - dev-mariadb
-         #- dev-h2
+         #- dev-mariadb
+         - dev-h2
    servlet:
       multipart:
          max-file-size: 128KB
