--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,8 +11,8 @@ spring:
       multipart:
          max-file-size: 128KB
          max-request-size: 128KB
-   jpa:
-      show-sql: true
+   #jpa:
+      #show-sql: true
 
 ---
 
