--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,10 +7,10 @@ spring:
       active:
          #- dev-mariadb
          - dev-h2
-   servlet:
-      multipart:
-         max-file-size: 128KB
-         max-request-size: 128KB
+   #servlet:
+    #  multipart:
+     #    max-file-size: 128KB
+      #   max-request-size: 128KB
 
    #jpa:
       #show-sql: true
