working on load production-size categories on data.sql

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
       active:
          - dev-mariadb
          #- dev-h2
-   jpa:
-      show-sql: true
+   #jpa:
+      #show-sql: true
 
 
 ---
