working on dynamic admin categories viewer

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,8 +29,8 @@ spring:
       password: misrra
       driver-class-name: org.mariadb.jdbc.Driver
       initialization-mode: always
-      schema: classpath:sql/schema.sql
-      data: classpath:sql/data.sql
+      #schema: classpath:sql/schema.sql
+      #data: classpath:sql/data.sql
    jpa:
       hibernate:
          ddl-auto: none
