--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,8 @@ server:
 spring:
    profiles:
       active:
-         - dev-mariadb
-         #- dev-h2
+         #- dev-mariadb
+         - dev-h2
    #jpa:
       #show-sql: true
 
@@ -29,8 +29,8 @@ spring:
       password: misrra
       driver-class-name: org.mariadb.jdbc.Driver
       initialization-mode: always
-      #schema: classpath:sql/schema.sql
-      #data: classpath:sql/data.sql
+      schema: classpath:sql/schema.sql
+      data: classpath:sql/data.sql
    jpa:
       hibernate:
          ddl-auto: none
