added proper management of email-already-exist situation on registration workflow. Closes #81. Closes #82

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
       #show-sql: true
 
 schedule:
+   cron:
+      expression: 0 15,30,45 * ? * *
    fixedRate:
       string: PT60S
 ---
