--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,34 +17,32 @@ schedule:
 
 validation:
    numeric:
-      authors:
-         min: 1
-         max: 5
-      pages:
-         min: 1
-         max: 5000
-      price:
-         max: 1000000000
-         integer: 9
-         fraction: 2
-      stock:
-         min: 0
-         max: 100000000
+      pages-min: 1
+      pages-max: 5000
+      stock-min: 0
+      stock-max: 100000000
+      image-max-size: 500000 # in bytes
    regex:
       email: ^[_A-Za-z0-9-+]+(.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(.[A-Za-z0-9]+)*(.[A-Za-z]{2,})$
-      password: ^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,16}$
-      text-basic: ^[\s\w-.,:"?¿¡!()äëïöüñáéíóú]{0,30}$
-      text-long: ^[\s\w-.,:;"?¿¡!()äëïöüñáéíóú]{0,1000}$
-      text-query: ^[\s\w-.,:"?¿¡!()äëïöüñáéíóú]{0,100}$
-      isbn-code: ^(?:ISBN(?:-1[03])?:? )?(?=[0-9X]{10}$|(?=(?:[0-9]+[- ]){3})[- 0-9X]{13}$|97[89][0-9]{10}$|(?=(?:[0-9]+[- ]){4})[- 0-9]{17}$)(?:97[89][- ]?)?[0-9]{1,5}[- ]?[0-9]+[- ]?[0-9]+[- ]?[0-9X]$
-      isbn-filter: '[- ]|^ISBN(?:-1[03])?:?'
+      password: ^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,16}$ # The password must be at least 8 characters, with at least one lowercase, one uppercase and one number
+      text-basic: ^[\s\w\-.,:"?¿¡!()äëïöüñáéíóúÄËÏÖÜÑÁÉÍÓÚ]{0,30}$
+      text-long: ^[\s\w\-.,:;"?¿¡!()äëïöüñáéíóúÄËÏÖÜÑÁÉÍÓÚ]{0,1000}$
+      text-query: ^[\s\w\-.,:"?¿¡!()äëïöüñáéíóúÄËÏÖÜÑÁÉÍÓÚ]{0,100}$
+      isbn-code: ^(?:ISBN(?:-1[03])?:? )?(?=[0-9X]{10}$|(?=(?:[0-9]+[\- ]){3})[\- 0-9X]{13}$|97[89][0-9]{10}$|(?=(?:[0-9]+[\- ]){4})[\- 0-9]{17}$)(?:97[89][\- ]?)?[0-9]{1,5}[\- ]?[0-9]+[\- ]?[0-9]+[\- ]?[0-9X]$
+      isbn-filter: '[\- ]|^ISBN(?:-1[03])?:?'
       image-mime-type: ^image\/.*$
-      image-name: ^[ \w-._]{1,30}$
+      image-name: ^[ \w\-.]{1,30}$
       year: ^[\d]{1,4}$
-      price: ^[\\d]{0,9}([.][\\d]{1,2})*$
+      price: ^[\d]{0,9}([.][\d]{1,2})*$ # dependency with PriceIntervals enum, so keep an eye on it
 
-security-token:
-   expiration-in-minutes: 2
+security:
+   token:
+      expiration-in-minutes: 2
+   random-password:
+      numOfLowerCase: 2
+      numOfUpperCase: 2
+      numOfDigit: 2
+      size: 10
 
 front-end:
    search-criteria:
