added custom http-error management. Closes #88

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 server:
    servlet:
       context-path: /firstmarket
+   error:
+      whitelabel:
+         enabled: false
 
 spring:
    profiles:
