-added birth date validation. Closes #110. -externalized birth date params (min-year). Closes #111.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,7 @@ schedule:
 
 validation:
    numeric:
+      profile-min-year: 1900
       pages: 1,5000 # min,max
       stock: 0,100000000 # min,max
       image-max-size: 512000 # in bytes (500KB)
