working on stripe integration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,12 @@ schedule:
       cron: 0 */5 * ? * *
       #fixed-rate-string: PT60S
 
+payment:
+   stripe:
+      key:
+         public: pk_test_iLddVaUD1AOnudl6q5v2LEKt00Xk2Yz1R6
+         private: someprivatekey_bitch
+
 validation:
    numeric:
       profile-min-year: 1900
