--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,26 @@
             <version>2.0.6</version>
         </dependency>
 
+        <!--
+        For Maven, add the following dependency to your POM and replace {VERSION} with the
+        version number you want to use from
+        - https://mvnrepository.com/artifact/com.stripe/stripe-java or
+        - https://github.com/stripe/stripe-java/releases/latest
+        -->
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>19.11.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
