working on stripe integration - added basic checkout form (Closes #72)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -70,6 +70,8 @@ front-end:
             speed: 50
       title-max-size: 20
       authors-max: 2
+   checkout:
+      title-max-size: 20
    cart:
       title-max-size: 40
       authors-max: 2
