--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
          # dev-h2          # un-comment @Lob on image.data
          # dev-mariadb     # deprecated
    jpa:
-      show-sql: true
+      show-sql: false
 
 fm:
    host-address: https://firstmarket.herokuapp.com/
