working on heroku deployment - host-address flexibility

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,8 +15,7 @@ spring:
       show-sql: false
 
 fm:
-   host-address: https://firstmarket.herokuapp.com/
-   #host-address: http://localhost:8080
+   host-address: ${HOST_ADDRESS:http://localhost:8080/}
    schedule:
       garbage-collection:
          #cron: 0 00,10,20,30,40, * ? * *
