working on #125. added users, profiles and carts. Also split data.sql files

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -114,7 +114,7 @@ spring:
       driver-class-name: org.postgresql.Driver
       initialization-mode: always
       schema: classpath:sql/schema.sql
-      data: classpath:sql/data.sql
+      data: classpath:sql/data*.sql
    jpa:
       properties:
          hibernate:
