--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,13 @@ spring:
    profiles:
       active:
          - dev-postgresql  # comment @Lob on image.data
-         # dev-h2          # un-comment @Lob on image.data
+         #- dev-h2          # un-comment @Lob on image.data
    jpa:
       show-sql: false
 
 fm:
+   date:
+      format: yyyy-MM-dd
    host-address: ${HOST_ADDRESS:http://localhost:8080/}
    schedule:
       garbage-collection:
