--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,8 +12,9 @@ spring:
       show-sql: false
 
 fm:
-   date:
-      format: dd-MM-yyyy
+   time-format:
+      date: dd-MM-yyyy
+      date-time: dd-MM-yyyy HH:mm:ss
    host-address: ${HOST_ADDRESS:http://localhost:8080/}
    schedule:
       garbage-collection:
