added pagination control to images.html

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -85,6 +85,7 @@ fm:
    pagination:
       default-sort-index:
          book: 2
+         image: 2
       default-size-index:
          image: 0
          home: 1
