added users management functionality form admin. Closes #27

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -88,10 +88,12 @@ fm:
       default-sort-index:
          book: 2
          image: 2
+         user: 1
       default-size-index:
          image: 0
          home: 1
          search: 2
+         user: 1
       default-index: 0
    mail:
       smtp:
