-email sent on purchase success. Closes #134 -mails are sent asynchronous -some properties refactored to property-holder classes

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,7 +26,8 @@ spring:
                writetimeout: 5000
 
 fm:
-   host-address: ${HOST_ADDRESS:http://localhost:8080/}
+   host:
+      address: ${HOST_ADDRESS:http://localhost:8080/}
    schedule:
       garbage-collection:
          cron: 0 */5 * ? * *
