--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,7 +30,7 @@ fm:
       address: ${HOST_ADDRESS:http://localhost:8080/}
    schedule:
       garbage-collection:
-         cron: 0 */45 * ? * *
+         cron: 0 */5 * ? * *
          #fixed-rate-string: PT60S
    payment:
       stripe:
@@ -38,9 +38,9 @@ fm:
             public: ${STRIPE_PUBLIC_KEY}
             private: ${STRIPE_SECRET_KEY}
             webhook: ${STRIPE_WEBHOOK_SECRET}
-         pi-minutes: 15
+         pi-minutes: 3
          limit-of-naps: 3
-         ips: 3.18.12.63,3.130.192.231,13.235.14.237,13.235.122.149,35.154.171.200,52.15.183.38,54.187.174.169,54.187.205.235,54.187.216.72,54.241.31.99,54.241.31.102,54.241.34.107
+         ips: 0:0:0:0:0:0:0:1,127.0.0.1,3.18.12.63,3.130.192.231,13.235.14.237,13.235.122.149,35.154.171.200,52.15.183.38,54.187.174.169,54.187.205.235,54.187.216.72,54.241.31.99,54.241.31.102,54.241.34.107
    validation:
       numeric:
          profile-min-year: 1900
@@ -62,10 +62,10 @@ fm:
          phone: ^(\+)?(\([0-9]{0,4}\))?(([0-9\s.\-]){9,15})?$ # poor but enough approximation
    security:
       lock:
-         num-of-attempts: 5
-         locking-minutes: 60
+         num-of-attempts: 2
+         locking-minutes: 5
       token:
-         expiration-in-minutes: 60
+         expiration-in-minutes: 3
       random-password:
          num-of-lower-case: 2
          num-of-upper-case: 2
@@ -137,8 +137,8 @@ spring:
       password: ${JDBC_DATABASE_PASSWORD}
       driver-class-name: org.postgresql.Driver
       initialization-mode: always
-      schema: classpath:sql/schema.sql
-      data: classpath:sql/data*.sql
+      #schema: classpath:sql/schema.sql
+      #data: classpath:sql/data*.sql
    jpa:
       properties:
          hibernate:
