--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,9 +50,9 @@ fm:
       regex:
          email: ^[_A-Za-z0-9-+]+(.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(.[A-Za-z0-9]+)*(.[A-Za-z]{2,})$
          password: ^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,16}$ # The password must be at least 8 characters, with at least one lowercase, one uppercase and one number
-         text-basic: ^[\s\w\-.,:"'?¿¡!()äëïöüñáéíóúÄËÏÖÜÑÁÉÍÓÚ]{0,150}$
-         text-long: ^[\s\w\-.,:;"'?¿¡!()äëïöüñáéíóúÄËÏÖÜÑÁÉÍÓÚ]{0,1000}$
-         text-query: ^[\s\w\-.,:"'?¿¡!()äëïöüñáéíóúÄËÏÖÜÑÁÉÍÓÚ]{0,100}$
+         text-basic: ^[\s\w\-.,:"'?¿¡!()äëïöüñáéíóúàèìòùâêîôûÂÊÎÔÛÀÈÌÒÙÄËÏÖÜÑÁÉÍÓÚ]{0,150}$
+         text-long: ^[\s\w\-.,:;"'?¿¡!()äëïöüñáéíóúàèìòùâêîôûÂÊÎÔÛÀÈÌÒÙÄËÏÖÜÑÁÉÍÓÚ]{0,1000}$
+         text-query: ^[\s\w\-.,:"'?¿¡!()äëïöüñáéíóúàèìòùâêîôûÂÊÎÔÛÀÈÌÒÙÄËÏÖÜÑÁÉÍÓÚ]{0,100}$
          isbn-code: ^(?:ISBN(?:-1[03])?:? )?(?=[0-9X]{10}$|(?=(?:[0-9]+[\- ]){3})[\- 0-9X]{13}$|97[89][0-9]{10}$|(?=(?:[0-9]+[\- ]){4})[\- 0-9]{17}$)(?:97[89][\- ]?)?[0-9]{1,5}[\- ]?[0-9]+[\- ]?[0-9]+[\- ]?[0-9X]$
          isbn-filter: '[\- ]|^ISBN(?:-1[03])?:?'
          image-mime-type: ^image\/.*$
